2024-11-04 Francois Suter (Idéative)  <typo3@ideative.ch>

    * Add events for replacing all usual hooks, resolves #31

2024-10-31 Francois Suter (Idéative)  <typo3@ideative.ch>

    * Introduce connection information, resolves #33

2024-07-20 Francois Suter (Idéative)  <typo3@ideative.ch>

    * Introduce call context , resolves #30

2024-06-16 Francois Suter (Idéative)  <typo3@ideative.ch>

    * Clean up code with Rector, drop compatibility with PHP 7.4 and 8.0, references #28
    * Move tests to typo3/testing-framework (functional tests not working)

2024-05-10 Francois Suter (Idéative)  <typo3@ideative.ch>

    * Ensure base compatibility with TYPO3 13, references #28

2023-08-07 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Verify compatibility with PHP 8.2
	* Release version 5.1.0

2023-07-04 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Report error also for files with an absolute path, resolves #27

2023-05-02 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Add missing module title
	* Verify compatibility with TYPO3 12 LTS
	* Release version 5.0.1

2022-12-27 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Release version 5.0.0

2022-12-25 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Ensure compatibility with TYPO3 12, resolves #24
	* Ensure compatibility with PHP 8.1

2022-12-18 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Implement new connector service registration API, resolves #23
	* Adapt to new backend modules templating, resolves #25
	* Streamline retrieval of language service, resolves #26

2021-10-05 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Release version 4.0.0

2021-09-07 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Ensure compatibility with PHP 8.0

2021-04-06 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Ensure compatibility with TYPO3 11, drop support for TYPO3 8 and 9
	* Drop usage of GeneralUtility::getUrl()
	* Update module icon and fix viewport issue
