@@ -47,8 +47,8 @@ Reading files
 """""""""""""
 
 The :code:`\Cobweb\Svconnector\Utility\FileUtility` provides a general
-method for reading the content of a file. It will transparently handle
-the following syntax for pointing to a file:
+method for reading the content of a file, even if that is actually an API endpoint.
+It will transparently handle the following syntax for pointing to a resource:
 
 - an absolute file path (within the TYPO3 root path or :code:`TYPO3_CONF_VARS[BE][lockRootPath]`),
   e.g. :file:`/var/foo/web/fileadmin/import/bar.csv`
